# DHLLDV

./: .gitignore  DHLLDV_Utils.py  DHLLDV_constants.py  DHLLDV_framework.py  README.md  Stratified.py  heterogeneous.py  homogeneous.py  requirements.txt  setup.cfg  stratified.py  test_DHLLDV_framework.py  test_framework_from_SAM_xl.py  test_heterogeneous.py  test_homogeneous.py  test_stratified.py  test_utils.py  tests.gnumeric  tests.xls  viewer.py
DHLLDV/: DHLLDV_constants.py  DHLLDV_framework.py  __init__.py  heterogeneous.py  homogeneous.py  stratified.py
DHLLDV_Framework_xlsm/: README.txt
DHLLDV_Simulation/: CrossoverGauge.py  PZ_plot.py  main.py
DHLLDV_viewer/: ExamplePumps.py  LICENSE  SystemTab.py  __init__.py  load_pump_excel.py  main.py  store_pump_excel.py  theme.yaml  unit_conv.py
Scripts/: ExamplePumps.py  LICENSE  LSLDV.py  SystemTab.py  bokeh_viewer.py  time_ERHG_graded.py  viewer.py  viewer_Wilson.py
Wilson/: Wilson_Stratified.py  __init__.py
tests/: Example_excel_input.xlsx  Example_excel_input_ExtraColumn.xlsx  Example_excel_input_MissingColumn.xlsx  Example_excel_input_NoDriverTable.xlsx  Pump_curve.xlsm  Pump_curve.xlsx  test-lagrPipe.xlsx  test_DHLLDV_framework.py  test_DHLLDV_framework_graded.py  test_Framework_LDV.py  test_LagrPipeline.py  test_Pipe.py  test_PumpObj.py  test_SlurryObj.py  test_Wilson_V50.py  test_Wilson_stratified.py  test_excel_import.py  test_excel_store.py  test_framework_from_SAM_xl.py  test_heterogeneous.py  test_homogeneous.py  test_lagrPipe.py  test_lagrPipe_head_calcs.py  test_pipeline.xlsm  test_stratified.py  (+2 more)
(+19 files in other folders)
