[metadata]
name = DHLLDV
version = 0.3.0
author = Robert Ramsdell
author_email = Robert.Ramsdell@DredgingResources.net
description = The Delft Head Loss and Limit Velocity Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rcriii42/DHLLDV
project_urls =
    Bug Tracker = https://github.com/rcriii42/DHLLDV/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    xlwings